Listo Modulo que instala y arranca el APACHE

--- a/roles/httpd/tasks/main.yml
+++ b/roles/httpd/tasks/main.yml
@@ -1,2 +1,13 @@
 ---
 # tasks file for apache
+- name: Install the apache package
+  package:
+    name: httpd
+    state: latest
+
+- name: enable apache at boot
+  service:
+    name: httpd
+    state: started
+
+
