--- a/site.yaml
+++ b/site.yaml
@@ -2,6 +2,13 @@
 - hosts: all
   become: yes
   roles:
-  - common 
+    - common 
   tags:
     - common
+
+- hosts: frontends, apps
+  become: yes
+  roles:
+    - httpd
+  tags:
+    - httpd
