--- a/roles/haproxy/tasks/main.yml
+++ b/roles/haproxy/tasks/main.yml
@@ -1,2 +1,20 @@
 ---
-# tasks file for haproxy
+# tasks file forhaproxy
+- name: Install the haproxy package
+  package:
+    name: haproxy
+    state: latest
+
+- name: enable HAProxy
+  service:
+    name: haproxy
+    state: started
+
+- name: configure haproxy
+  template:
+    src: templates/haproxy.cfg.j2
+    dest: /etc/haproxy/haproxy.cfg
+  notify:
+    - restart haproxy
+
+
