--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -1,2 +1,23 @@
 ---
-# tasks file for tomcat
+# tasks file fortomcat
+- name: Install the tomcat package
+  package:
+    name: tomcat
+    state: latest
+
+- name: enable Tomcat
+  service:
+    name: tomcat
+    state: started
+
+- name: Create Tomcat WEBROOT
+  file:
+    path: /usr/share/tomcat/webapps/ROOT
+    state: directory
+
+- name: copy static index.html to tomcat webapps/ansible/index.html
+  template:
+    src: templates/index.html.j2
+    dest: /usr/share/tomcat/webapps/ROOT/index.html
+  notify:
+    - restart tomcat
