Cambiamos el mode del archivo repo para que sea legible

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -5,4 +5,4 @@
   template:
     src: files/open_three-tier-app.repo
     dest: /etc/yum.repos.d/open_three-tier-app.repo
-    mode: 0644
+    mode: u=rw,go=r
