--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -5,11 +5,6 @@
     name: tomcat
     state: latest
 
-- name: enable Tomcat
-  service:
-    name: tomcat
-    state: started
-
 - name: Create Tomcat WEBROOT
   file:
     path: /usr/share/tomcat/webapps/ROOT
@@ -21,3 +16,9 @@
     dest: /usr/share/tomcat/webapps/ROOT/index.html
   notify:
     - restart tomcat
+
+- name: enable Tomcat
+  service:
+    name: tomcat
+    state: started
+    enabled: true
