Role que instala la DB y la deja inicializada

--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -1,2 +1,18 @@
 ---
-# tasks file for postgres
+# tasks file forpostgresql
+- name: Install the postgresql package
+  package:
+    name: postgresql-server
+    state: latest
+
+- name: initialize postgres
+  command: 
+    cmd: postgresql-setup initdb
+    creates: /var/lib/pgsql/data/postgresql.conf
+
+- name: enable PostgreSQL
+  service:
+    name: postgresql
+    state: started
+    enabled: true
+
