--- a/roles/win_ad_install/vars/main.yml
+++ b/roles/win_ad_install/vars/main.yml
@@ -4,3 +4,5 @@ ad_domain_name: "ad1.ccbd.example.opentlc.com"
 ad_safe_mode_password: "{{ ansible_password }}"
 ad_admin_user: "admin@{{ ad_domain_name }}"
 ad_admin_password: "{{ ansible_password }}"
+ad_domain_mode: "Win2012R2"
+ad_forest_mode: "Win2012R2"
