--- a/roles/win_ad_install/tasks/main.yml
+++ b/roles/win_ad_install/tasks/main.yml
@@ -20,6 +20,12 @@
     reboot_timeout: 300
   when: domain_install.reboot_required
 
+- name: List the Domains available
+  win_command: nltest
+  args:
+    stdin: /dclist:"{{ ad_domain_name }}"
+
+
 - name: Ensure user admin is present in Domain Admins  group
   win_domain_user:
     name: "{{ ad_admin_user }}"
