--- a/roles/win_ad_install/vars/main.yml
+++ b/roles/win_ad_install/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 # vars file for win_ad_install
-ad_domain_name: "ad1.ccbd.example.opentlc.com"
+ad_domain_name: "ad1.9a86.example.opentlc.com"
 ad_safe_mode_password: "{{ ansible_password }}"
 ad_admin_user: "admin"
 ad_admin_password: "{{ ansible_password }}"
