--- a/roles/win_service_config/tasks/main.yml
+++ b/roles/win_service_config/tasks/main.yml
@@ -1,23 +1,25 @@
 ---
 # tasks file for win_service_config
-- name: Install multiple packages sequentially
-  when: ansible_distribution == "Microsoft Windows Server 2012 R2 Standard"
+- name: Install Windows package
   win_chocolatey:
     name: "{{ package_name }}"
-    state: present
+    params: "{{ parameters }}"
+    state: latest
+  when: ansible_distribution == "Microsoft Windows Server 2012 R2 Standard"
 
-- name: Set the log on user to Local Service
+- name: Start windows service
   win_service:
     name: "{{ service_name }}"
     state: started
+    start_mode: auto
+  when: ansible_distribution == "Microsoft Windows Server 2012 R2 Standard"
 
-- name: Firewall rule to allow {{ service_name }} on TCP port {{ local_port }}
+- name: Add win_firewall_rule
   win_firewall_rule:
     name: "{{ service_name }}"
     localport: "{{ local_port }}"
     action: allow
     direction: in
-    protocol: tcp
+    protocol: "{{ protocol_name }}"
     state: present
     enabled: yes
-
